# Partiels-Algo

./: CMakeLists.txt
src/: exo1.cpp  exo10.cpp  exo2.cpp  exo3.cpp  exo4.cpp  exo5.cpp  exo6.cpp  exo7.cpp  exo8.cpp  exo9.cpp  main.cpp
